# maydon

./: .gitattributes  Cargo.toml  README.md  flake.nix  shell.nix
src/: lib.rs
tests/: basic.rs  custom.rs  fail.rs
